--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class='card'>
-    <h3>Topics</h3>
+    <h3><a href='topics.html'>Topics</a></h3>
   </div>
 </body>
 </html>
