--- a/topics.html
+++ b/topics.html
@@ -13,7 +13,13 @@
         <ul>
             <li>Mathematics</li>
             <ul>
-                <li></li>
+                <li>Arithmetic</li>
+                <ul>
+                    <li>Addition</li>
+                    <li>Subtraction</li>
+                    <li>Multiplication</li>
+                    <li>Division</li>
+                </ul>
             </ul>
         </ul>
     </ul>
