--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <div class='card'>
     <h3><a href='topics.html'>Topics</a></h3>
   </div>
+  <div class='card'>
+    <h3><a href="#">Curricula</a></h3>
+  </div>
 </body>
 </html>
