--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <link rel='stylesheet' href='styles.css'>
 </head>
 <body>
-  <div class='card'>
-    <h3><a href='topics.html'>Topics</a></h3>
-  </div>
-  <div class='card'>
-    <h3><a href="#">Curricula</a></h3>
+  <div class='cards'>
+    <div class='card'>
+      <h3><a href='topics.html'>Topics</a></h3>
+    </div>
+    <div class='card'>
+      <h3><a href="#">Curricula</a></h3>
+    </div>
   </div>
 </body>
 </html>
