--- a/topics.html
+++ b/topics.html
@@ -10,13 +10,13 @@
 <body>
     <a href='index.html'>Home</a>
     <ul>
-        <li>Formal Science</li>
+        <li><a href='form-sci.html'>Formal Science</a></li>
         <ul>
-            <li>Mathematics</li>
+            <li><a href='form-sci/math.html'>Mathematics</a></li>
             <ul>
-                <li>Arithmetic</li>
+                <li><a href='form-sci/math/arithmetic.html'>Arithmetic</a></li>
                 <ul>
-                    <li>Addition</li>
+                    <li><a href='form-sci/math/arithmetic/addition.html'>Addition</a></li>
                     <li>Subtraction</li>
                     <li>Multiplication</li>
                     <li>Division</li>
