--- a/topics.html
+++ b/topics.html
@@ -17,9 +17,9 @@
                 <li><a href='form-sci/math/arithmetic.html'>Arithmetic</a></li>
                 <ul>
                     <li><a href='form-sci/math/arithmetic/addition.html'>Addition</a></li>
-                    <li>Subtraction</li>
-                    <li>Multiplication</li>
-                    <li>Division</li>
+                    <li><a href='form-sci/math/arithmetic/subtraction.html'>Subtraction</a></li>
+                    <li><a href='form-sci/math/arithmetic/multiplication.html'>Multiplication</a></li>
+                    <li><a href='form-sci/math/arithmetic/division.html'>Division</a></li>
                 </ul>
             </ul>
         </ul>
