--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <div class='cards'>
     <div class='card'>
-      <h3><a href='topics.html'>Topics</a></h3>
+      <a href='topics.html'><h3>Topics</h3></a>
     </div>
     <div class='card'>
-      <h3><a href="#">Curricula</a></h3>
+      <a href="#"><h3>Curricula</h3></a>
     </div>
   </div>
 </body>
