--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
+  <script type=text/javascript src='index.js'></script>
   <link rel='stylesheet' href='styles.css'>
 </head>
 <body>
+    <h1>Welcome!</h1>
+    <p>What would you like to learn today?</p>
   <div class='cards'>
-    <div class='card'>
-      <a href='topics.html'><h3>Topics</h3></a>
-    </div>
-    <div class='card'>
-      <a href="#"><h3>Curricula</h3></a>
-    </div>
+    <a href='topics.html'><div class='card'>
+      <h3>Topics</h3>
+    </div></a>
+    <a href='#'><div class='card'>
+        <h3>Courses</h3>
+      </div></a>
+      <a href='#'><div class='card'>
+        <h3>Standards <br> & tests</h3>
+      </div></a>
   </div>
 </body>
 </html>
