--- a/form-sci/math/arithmetic/addition.html
+++ b/form-sci/math/arithmetic/addition.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Addition</title>
+    <link rel='stylesheet' href='/styles.css'>
+    <script src='index.js'></script>
+    <script src="addition.js"></script>
 </head>
-<body>
-    <h1>Addition</h1>
-    <p>Addition is like adding two numbers.</p>
+<body onload="getNumbers()" src="addition.js">
+    <div class='content'>
+        <div class='practice'>
+            <h1>Addition</h1>
+            <h3 id="msg"></h3>
+            <h2><span id="num1"></span> + 
+                <span id="num2">2</span> = 
+            <span><input id="answer" type="number" /></span> 
+            <button id='check' onclick="check()" src="addition.js">Check</button></h2>
+        </div>
+        <!-- <div class='mastery'>
+            <h3>Mastery level:</h3><h3 id='mastery'></h3>
+        </div> -->
+    </div>
 </body>
 </html>
