--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content='0: href=index.php'>
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home</title>
+  <link rel='stylesheet' href='css/styles.css'>
+  <script type=text/javascript src='js/index.js'></script>
 </head>
-<body>
-    
+<b>
+  <div include-html='header.html' src='js/index.js'></div>
+    <h1>Welcome!</h1>
+    <p>What would you like to learn today?</p>
+  <div class='cards'>
+    <a href='topics.html'><div class='card'>
+      <h3>Topics</h3>
+    </div></a>
+    <a href='#'><div class='card'>
+        <h3>Courses</h3>
+      </div></a>
+      <a href='#'><div class='card'>
+        <h3>Standards <br> & tests</h3>
+      </div></a>
+  </div>
+  <script>includeHTML();</script>
 </body>
 </html>
