--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
+  <link rel='icon' href='imgs/treble-clef.png'>
   <link rel='stylesheet' href='css/styles.css'>
   <script type=text/javascript src='js/index.js'></script>
 </head>
