--- a/donate.html
+++ b/donate.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate</title>
+    <link rel='icon' href='imgs/treble-clef.png'>
+    <link rel='stylesheet' href='css/styles.css'>
+    <script type=text/javascript src='js/index.js'></script>
 </head>
 <body>
-    <h1>gimme ur money</h1>
-    <bl>
-        <li>mynamejeff</li>
-    </bl>
+    <div include-html='header.html' src='js/index.js'></div>
+    <h1>Donations will go here</h1>
+    <p>I know you're dying to give me that $$$. You can donate here once I set it up. Thank you for your support! -Brandon 1/21/2022</p>
+    <div include-html='footer.html' src='js/index.js'></div>
+    <script>includeHTML();</script>
 </body>
 </html>
