--- a/header.html
+++ b/header.html
@@ -1,5 +1,30 @@
-<html>
-    <h1>hi</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home</title>
+  <link rel='icon' href='imgs/treble-clef.png'>
+  <link rel='stylesheet' href='css/styles.css'>
+  <script type=text/javascript src='js/index.js'></script>
+</head>
+<b>
+  <div include-html='header.html' src='js/index.js'></div>
+    <h1>Welcome!</h1>
+    <p>What would you like to learn today?</p>
+  <div class='cards'>
+    <a href='topics.html'><div class='card'>
+      <h3>Topics</h3>
+    </div></a>
+    <a href='#'><div class='card'>
+        <h3>Courses</h3>
+      </div></a>
+      <a href='#'><div class='card'>
+        <h3>Standards <br> & tests</h3>
+      </div></a>
+  </div>
+  <div include-html='footer.html' src='js/index.js'></div>
+  <script>includeHTML();</script>
+</body>
 </html>
-<h1>hi this is the header</h1>
-<hr>
