--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h3>Standards <br> & tests</h3>
       </div></a>
   </div>
+  <div include-html='footer.html' src='js/index.js'></div>
   <script>includeHTML();</script>
 </body>
 </html>
