--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 <html>
     <div class='header desktop-only'>
+        <a href='index.html'>Home</a>
         <a href='donate.html'>Donate</a>
         <a href='signin.html'>Sign in</a>
     </div>
-    <h1>hi</h1>
 </html>
 <hr>
