--- a/header.html
+++ b/header.html
@@ -1,8 +1,15 @@
 <html>
     <div class='header desktop-only'>
-        <a href='index.html'>Home</a>
-        <a href='donate.html'>Donate</a>
-        <a href='signin.html'>Sign in</a>
+        <div class='site-content'>
+            Heres a menu with all the courses, tests, skills, etc
+        </div>
+        <a href='index.html'>
+            <img src='imgs/sl-logo.PNG' style='height:50px' alt='logo here'>
+        </a>
+        <div class='top-menu'>
+            <!-- <a href='donate.html'>Donate</a> -->
+            <!-- <a href='signin.html'>Sign in</a> -->
+        </div>
     </div>
 </html>
 <hr>
