--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel='icon' href='imgs/treble-clef.png'>
+  <link rel='icon' href='imgs/sl-logo.PNG'>
   <link rel='stylesheet' href='css/styles.css'>
   <script type=text/javascript src='js/index.js'></script>
 </head>
-<b>
   <div include-html='header.html' src='js/index.js'></div>
+  <script>includeHTML();</script>
+  <div style='position:relative;margin:auto'>
     <h1>Welcome!</h1>
-    <p>What would you like to learn today?</p>
-  <div class='cards'>
-    <a href='topics.html'><div class='card'>
-      <h3>Topics</h3>
-    </div></a>
-    <a href='#'><div class='card'>
-        <h3>Courses</h3>
+    <a href='challenge.html'><button>Today's Challenge</button></a>
+    <!-- <div class='cards'>
+      <a href='topics.html'><div class='card'>
+        <h3>Have a test/quiz soon</h3>
       </div></a>
       <a href='#'><div class='card'>
-        <h3>Standards <br> & tests</h3>
-      </div></a>
+          <h3>Courses</h3>
+        </div></a>
+        <a href='#'><div class='card'>
+          <h3>Standards <br> & tests</h3>
+        </div></a> -->
+    </div>
+    <img src='imgs/sl-logo.PNG'>
   </div>
   <div include-html='footer.html' src='js/index.js'></div>
-  <script>includeHTML();</script>
 </body>
 </html>
