--- a/challenge.html
+++ b/challenge.html
@@ -13,7 +13,7 @@
     <div include-html='header.html' src='js/index.js'></div>
     <script>includeHTML();</script>
     <h1>Challenge of the day 1/26/2022! Are you ready?</h1>
-    <button>Start!</button>
+    <button>Let's go</button>
     <div include-html='footer.html' src='js/index.js'></div>
 </body>
 </html>
