--- a/header.html
+++ b/header.html
@@ -1,14 +1,15 @@
 <html>
     <div class='header desktop-only'>
         <div class='site-content'>
-            Heres a menu with all the courses, tests, skills, etc
+            [Menu]
         </div>
         <a href='index.html'>
-            <img src='imgs/sl-logo.PNG' style='height:50px' alt='logo here'>
+            <img class='logo' src='imgs/sl-logo.PNG' style='height:50px' alt='logo here'>
         </a>
         <div class='top-menu'>
             <!-- <a href='donate.html'>Donate</a> -->
             <!-- <a href='signin.html'>Sign in</a> -->
+            <a href='about.html'>About</a>
         </div>
     </div>
 </html>
