--- a/index.html
+++ b/index.html
@@ -4,28 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-Frame-Options" content="deny">
   <title>Home</title>
   <link rel='icon' href='imgs/sl-logo.PNG'>
   <link rel='stylesheet' href='css/styles.css'>
   <script type=text/javascript src='js/index.js'></script>
 </head>
+<body>
   <div include-html='header.html' src='js/index.js'></div>
   <script>includeHTML();</script>
-  <div style='position:relative;margin:auto'>
+  <div class='content'>
+    <br>
     <h1>Welcome!</h1>
-    <a href='challenge.html'><button>Today's Challenge</button></a>
-    <!-- <div class='cards'>
-      <a href='topics.html'><div class='card'>
-        <h3>Have a test/quiz soon</h3>
-      </div></a>
-      <a href='#'><div class='card'>
-          <h3>Courses</h3>
-        </div></a>
-        <a href='#'><div class='card'>
-          <h3>Standards <br> & tests</h3>
-        </div></a> -->
-    </div>
-    <img src='imgs/sl-logo.PNG'>
+    <!-- <iframe src='challenge.html' scrolling='no' frameBorder='0'>Uh-Oh! Messed up the website, my bad..</iframe> -->
   </div>
   <div include-html='footer.html' src='js/index.js'></div>
 </body>
