--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,2 @@
-<span id="siteseal">
-  <script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=QgOm88k6maGnMXrCqa0sdYTZyHr52cBJH4CsvjP8M24ZiCOwf8pZKCEEd7sH">
-  </script>
-</span>
+<hr>
+<!-- <p>[The copyright is gonna go here as soon as I get that. in the meantime please don't steal my GENIUS ideas]</p> -->
