--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <script type=text/javascript src='js/index.js'></script>
 </head>
 <body>
-  <div include-html='header.html' src='js/index.js'></div>
+  <div id='header' include-html='header.html' src='js/index.js'></div>
   <script>includeHTML();</script>
+  
   <div class='content'>
     <br>
     <h1>Welcome!</h1>
-    <!-- <iframe src='challenge.html' scrolling='no' frameBorder='0'>Uh-Oh! Messed up the website, my bad..</iframe> -->
+    <iframe src='challenge.html' scrolling='no' frameBorder='0'>Uh-Oh! Messed up the website, my bad..</iframe>
   </div>
-  <div include-html='footer.html' src='js/index.js'></div>
+  <div id='footer' include-html='footer.html' src='js/index.js'></div>
 </body>
 </html>
