--- a/skills.html
+++ b/skills.html
@@ -18,7 +18,7 @@
     <br>
     <h1>Skills</h1>
     <div class='cards'>
-      <div class='row' style='display:flex;flex-direction:row'>
+      <!-- <div class='row' style='display:flex;flex-direction:row'>
         <a class='card formsci' href='skills/addition.html'>Addition</a>
         <a class='card formsci' href='skills/subtraction.html'>Subtraction</a>
         <a class='card formsci' href='skills/multiplication.html'>Multiplication</a>
@@ -30,7 +30,7 @@
       </div>
       <div class='row'>
         <a class='card'>Coulomb's Law</a>
-      </div>
+      </div> -->
       <div class='row'>
         <a href='skills/earTraining.html' class='card'>Ear Training</a>    
       </div>
