--- a/skills.html
+++ b/skills.html
@@ -32,6 +32,9 @@
         <a class='card'>Coulomb's Law</a>
       </div> -->
       <div class='row'>
+        <a href='skills/ieee754.html' class='card formsci'>IEEE-754 Floating Point</a>
+      </div>
+      <div class='row'>
         <a href='skills/earTraining.html' class='card'>Ear Training</a>    
       </div>
     </div>
