--- a/skills/ieee754.html
+++ b/skills/ieee754.html
@@ -14,7 +14,20 @@
     <script>includeHTML();</script>
     <h1>IEEE-754 Floating Point</h1>
     <p>The IEEE-754 standard defines a 32-bit floating point number as 1 sign bit, 8 exponent bits, and a 23-bit mantissa.</p>
-    <p>The decimal number is equal to (sign)<sup>-1</sup>&times;2<sup>exponent - 127</sup>&times;1.mantissa</p>
+    <p>The decimal number is equal to (-1)<sup>sign</sup>&times;2<sup>exponent - 127</sup>&times;1.mantissa</p>
+
+    <ul>Converting decimal portion to binary
+        <li>Keep multiplying by 2 until you reach 1 or you use up 23 bits.</li>
+        <li>If the product &lt; 1, append a 0 bit.</li>
+        <li>If the product &GreaterEqual; 1, append a 1 bit and truncate.</li>
+        <li>(e.g. 23/64 &times; 2 = 23/32 <b>0</b></li>
+        <li>23/32 &times; 2 = 23/16 <b>1</b></li>
+        <li>7/16 &times; 2 = 7/8 <b>0</b></li>
+        <li>7/8 &times; 2 = 7/4 <b>1</b></li>
+        <li>3/4 &times; 2 = 3/2 <b>1</b></li>
+        <li>1/2 &times; 2 = 1 (terminate) <b>1</b></li>
+        <li>&rArr; 23/64 = .010111<sub>2</sub>)</li>
+    </ul>
     
     <ol>Converting decimal &rightarrow; IEEE (e.g. 3.75)
         <li>Convert the truncated <a href='/skills/base-conversions.html'>decimal to binary</a> (e.g. 3.75 &RightArrow;3=11<sub>2</sub>)</li>
