--- a/challenge.html
+++ b/challenge.html
@@ -50,7 +50,7 @@
           + minutes + ":" + spref + seconds;
 
           // If the count down is over, write some text 
-          if (distance > 0) {
+          if (distance <= 0) {
             clearInterval(x);
             document.getElementById('challenge').innerHTML = "<h4 id='prompt'>Challenge of the day <span id='date'>2/2/2022</span>!<br> No help, no spoilers, no retakes!<br> Are you ready?</h4><button id='start-btn' onclick='countdown()'>Begin</button><div class='challenge-header'>" + 
             "<span id='countdown'></span>" + 
