ear training, looks brushup

--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
     <script type=text/javascript src='js/index.js'></script>
 </head>
 <body>
-    <div include-html='header.html' src='js/index.js'></div>
+    <div id='header' include-html='header.html' src='js/index.js'></div>
     <script>includeHTML();</script>
-    <p>Hello, my name is Brandon Schmitz. I'm a second-year student at Georgia Tech. Thanks for checking out my website!</p>
-    <div include-html='footer.html' src='js/index.js'></div>
+    <h3 style='margin-top:40px'>Hello, my name is Brandon Schmitz. I'm a second-year student at Georgia Tech. Thanks for checking out my website!</h3>
+    <div id='footer' include-html='footer.html' src='js/index.js'></div>
 </body>
 </html>
