--- a/header.html
+++ b/header.html
@@ -7,9 +7,10 @@
             <div id="sidenav" class="sidenav">
               <a href='#'></a>
               <a href='/index.html'>Dashboard</a>
-              <a href="/skills.html">Skills</a>
-              <!-- <a href="/areas.html">Areas of study</a> -->
-              <!-- <a href="/suggestions.html">Suggestions</a> -->
+              <a href="/skills.html" id='u'>Skills</a>
+              <a href="/areas.html">Areas of study</a>
+              <a href='/tutorials.html' id='u'>Tutorials</a>
+              <a href="/suggestions.html" id='u'>Suggestions</a>
               <a href="/about.html">About</a>
             </div>
           
@@ -21,7 +22,7 @@
         </a>
         <div class='top-menu' class='desktop-only'>
             <!-- <a href='donate.html'>Donate</a> -->
-            <!-- <a href='signin.html'>Sign in</a> -->
+            <a href='signup.html' style='position:absolute;right:50px;top:30px;'>Sign up</a>
             <a href='about.html' class='desktop-only'></a>
         </div>
     </div>
