--- a/header.html
+++ b/header.html
@@ -22,7 +22,7 @@
         </a>
         <div class='top-menu' class='desktop-only'>
             <!-- <a href='donate.html'>Donate</a> -->
-            <a href='signup.html' style='position:absolute;right:50px;top:30px;'>Sign up</a>
+            <a href='signup.html' style='position:absolute;right:50px;top:30px;' class='u'>Sign up</a>
             <a href='about.html' class='desktop-only'></a>
         </div>
     </div>
