--- a/challenge.html
+++ b/challenge.html
@@ -59,14 +59,14 @@
             "<div id='submit'></div>" + 
             "</div>";
           }
-        }, 1000);
+        }, 0);
         </script>
 
 </head>
 <body>
 
     <div id='challenge'>
-        <h1 id="demo"></h1>
+        <div id="demo"></div>
         <!-- <h4 id='prompt'>Challenge of the day <span id='date'>2/2/2022</span>!<br> No help, no spoilers, no retakes!<br> Are you ready?</h4>
         <button id='start-btn' onclick='countdown()'>Begin</button>
         <div class='challenge-header'>
