--- a/areas.html
+++ b/areas.html
@@ -13,47 +13,43 @@
 <body>
   <div id='header' include-html='/header.html' src='/js/index.js'></div>
   <script>includeHTML();</script>
-  
+  <h1>Areas of Study</h1>
   <div class='content'>
-    <br>
-    <h1>Areas of Study</h1>
     <p class='cards-label' id='u'>Mathematics</p>
     <div class='cards formsci' id='u'>
-      <a class='card'>Discrete Mathematics</a>
-      <div class='card'>Differential Calculus</div>
-      <div class='card'>Integral Calculus</div>
-      <div class='card'>Linear Algebra</div>
-      <div class='card'>Multivariable Calculus</div>
-      <div class='card'>Differential Equations</div>
-      <div class='card'>Combinatorics</div>
-      <div class='card'>Probability & Statistics</div>
+      <a class='card' href='topics/discrete-math.html'>Discrete Mathematics</a>
+      <a class='card'>Calculus</a>
+      <a class='card'>Linear Algebra</a>
+      <a class='card' href='topics/diffeq.html'>Differential Equations</a>
+      <a class='card' href='topics/combinatorics.html'>Combinatorics</a>
+      <a class='card'>Probability & Statistics</a>
     </div> 
     <p class='cards-label' id='u'>Computer Science</p>
     <div class='cards formsci' id='u'>
       <a class='card' href='topics/computer-org.html'>Computer Organization & Structure</a>
-      <div class='card'>Systems & Networks</div>
-      <div class='card'>Data Structures & Algorithms</div>
-      <div class='card'>Web Development</div>
-      <div class='card'>Python</div>
-      <div class='card'>Java</div>
-      <div class='card'>C</div>
+      <a class='card'>Systems & Networks</a>
+      <a class='card' href='topics/data-structures-algorithms.html'>Data Structures & Algorithms</a>
+      <a class='card'>Web Development</a>
+      <a class='card'>Python</a>
+      <a class='card'>Java</a>
+      <a class='card'>C</a>
     </div>
     <p class='cards-label' id='u'>Natural Science</p>
     <div class='cards natsci' id='u'>
-      <div class='card'>Classical Mechanics</div>
+      <a class='card' href='topics/mechanics.html'>Classical Mechanics</a>
       <a class='card' href='topics/emag.html'>Electricity & Magnetism</a>
-      <div class='card'>Quantum Mechanics</div>
-      <div class='card'>Chemistry</div>
-      <div class='card'>Genetics</div>
-      <div class='card'>Evolution</div>
-      <div class='card'>Astronomy</div>
+      <a class='card'>Quantum Mechanics</a>
+      <a class='card' href='topics/chemistry.html'>Chemistry</a>
+      <a class='card'>Genetics</a>
+      <a class='card'>Evolution</a>
+      <a class='card'>Astronomy</a>
     </div>
     <p class='cards-label' id='u'>Social Science</p>
     <div class='cards socsci' id='u'>
-      <div class='card'>Psychology</div>
-      <div class='card'>Economics</div>
-      <div class='card'>Politics</div>
-      <div class='card'>Sociology</div>
+      <a class='card'>Psychology</a>
+      <a class='card'>Economics</a>
+      <a class='card'>Politics</a>
+      <a class='card'>Sociology</a>
     </div>
     <p class='cards-label'>Humanities</p>
     <div class='cards humanities'>
