--- a/about.html
+++ b/about.html
@@ -12,7 +12,10 @@
 <body>
     <div id='header' include-html='header.html' src='js/index.js'></div>
     <script>includeHTML();</script>
-    <h3 style='margin-top:40px'>Hello, my name is Brandon Schmitz. I'm a second-year student at Georgia Tech. Thanks for checking out my website!</h3>
+    <h1>About</h1>
+    <div class='content'>
+        <h3 style='margin-top:40px;max-width:700px;text-align:center'>Hello, my name is Brandon Schmitz. I'm a second-year Computer Science student at Georgia Tech. Thanks for checking out my website!</h3>
+    </div>
     <div id='footer' include-html='footer.html' src='js/index.js'></div>
 </body>
 </html>
