--- a/areas.html
+++ b/areas.html
@@ -29,20 +29,20 @@
       <a class='card' href='topics/computer-org.html'>Computer Organization & Structure</a>
       <a class='card'>Systems & Networks</a>
       <a class='card' href='topics/data-structures-algorithms.html'>Data Structures & Algorithms</a>
-      <a class='card'>Web Development</a>
+      <a class='card' href='topics/webdev.html'>Web Development</a>
       <a class='card'>Python</a>
       <a class='card'>Java</a>
       <a class='card'>C</a>
     </div>
-    <p class='cards-label' id='u'>Natural Science</p>
-    <div class='cards natsci' id='u'>
+    <p class='cards-label'>Natural Science</p>
+    <div class='cards natsci'>
       <a class='card' href='topics/mechanics.html'>Classical Mechanics</a>
       <a class='card' href='topics/emag.html'>Electricity & Magnetism</a>
-      <a class='card'>Quantum Mechanics</a>
+      <a class='card' id='u'>Quantum Mechanics</a>
       <a class='card' href='topics/chemistry.html'>Chemistry</a>
-      <a class='card'>Genetics</a>
-      <a class='card'>Evolution</a>
-      <a class='card'>Astronomy</a>
+      <a class='card' id='u'>Genetics</a>
+      <a class='card' id='u'>Evolution</a>
+      <a class='card' id='u'>Astronomy</a>
     </div>
     <p class='cards-label' id='u'>Social Science</p>
     <div class='cards socsci' id='u'>
