--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   <h1>Welcome!</h1>
   <div class='content'>
-    <iframe src='challenge.html' scrolling='no' frameBorder='0'>Uh-Oh! Messed up the website, my bad..</iframe>
+    <iframe id='u' src='challenge.html' scrolling='no' frameBorder='0'>Uh-Oh! Messed up the website, my bad..</iframe>
   </div>
   
   <div id='footer' include-html='footer.html' src='js/index.js'></div>
