--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-Frame-Options" content="deny">
+  <meta http-equiv="refresh" content="0; URL=areas.html" />
   <title>Home</title>
   <link rel='icon' href='imgs/sl-logo.PNG'>
   <link rel='stylesheet' href='css/styles.css'>
