hide all (not rdy)

--- a/areas.html
+++ b/areas.html
@@ -18,11 +18,14 @@
     <p class='cards-label' id='u'>Mathematics</p>
     <div class='cards formsci' id='u'>
       <a class='card' href='topics/discrete-math.html'>Discrete Mathematics</a>
+      <a class="card">Number Theory</a>
+      <a class="card">Algebra</a>
+      <a class="card">Geometry</a>
       <a class='card'>Calculus</a>
       <a class='card'>Linear Algebra</a>
       <a class='card' href='topics/diffeq.html'>Differential Equations</a>
       <a class='card' href='topics/combinatorics.html'>Combinatorics</a>
-      <a class='card'>Probability & Statistics</a>
+      <a class='card' href='topics/probstats.html'>Probability & Statistics</a>
     </div> 
     <p class='cards-label' id='u'>Computer Science</p>
     <div class='cards formsci' id='u'>
@@ -32,10 +35,10 @@
       <a class='card' href='topics/webdev.html'>Web Development</a>
       <a class='card'>Python</a>
       <a class='card'>Java</a>
-      <a class='card'>C</a>
+      <a class='card' href="topics/c.html">C</a>
     </div>
-    <p class='cards-label'>Natural Science</p>
-    <div class='cards natsci'>
+    <p class='cards-label' id="u">Natural Science</p>
+    <div class='cards natsci' id="u">
       <a class='card' href='topics/mechanics.html'>Classical Mechanics</a>
       <a class='card' href='topics/emag.html'>Electricity & Magnetism</a>
       <a class='card' id='u'>Quantum Mechanics</a>
@@ -51,8 +54,8 @@
       <a class='card'>Politics</a>
       <a class='card'>Sociology</a>
     </div>
-    <p class='cards-label'>Humanities</p>
-    <div class='cards humanities'>
+    <p class='cards-label' id="u">Humanities</p>
+    <div class='cards humanities' id="u">
       <a class='card' id='u'>English Language</a>
       <a class='card' href='topics/music-theory.html'>Music Theory</a>
       <a class='card' id='u'>Visual Arts</a>
