hide dashboard tab

--- a/header.html
+++ b/header.html
@@ -14,7 +14,7 @@
         <div>
             <div id="sidenav" class="sidenav">
               <a href='#'></a>
-              <a href='/index.html'>Dashboard</a>
+              <a href='/index.html' id="u">Dashboard</a>
               <a href="/skills.html" id='u'>Skills</a>
               <a href="/areas.html">Areas of study</a>
               <a href='/tutorials.html' id='u'>Tutorials</a>
