about page & stylistic update

--- a/about.html
+++ b/about.html
@@ -13,8 +13,12 @@
     <div id='header' include-html='header.html' src='js/index.js'></div>
     <script>includeHTML();</script>
     <h1>About</h1>
-    <div class='content'>
-        <h3 style='margin-top:40px;max-width:700px;text-align:center'>Hello, my name is Brandon Schmitz. I'm a second-year Computer Science student at Georgia Tech. Thanks for checking out my website!</h3>
+    <div class='content' style="display:flex;flex-flow:row wrap;justify-content:center;margin-top:20px;align-items:center; gap:15px">
+        <h4 class='cards' style='margin: 0;max-width:300px;text-align:center;min-width:200px'>Hello, my name is Brandon Schmitz. I'm a second-year Computer Science student at Georgia Tech. Thanks for checking out my website!</h4>
+        <figure style="margin:0">
+            <img src="imgs/me.jpeg" style="margin:0;height:250px;border-radius:10px;border:3px solid rgb(88, 88, 88);">   
+            <figcaption style="text-align:center">this.... is... me</figcaption> 
+        </figure>
     </div>
     <div id='footer' include-html='footer.html' src='js/index.js'></div>
 </body>
