--- a/footer-nm.html
+++ b/footer-nm.html
@@ -1,2 +1,2 @@
-<hr id="footer" style="width:100%">
+<hr id="footer" style="width:100%;margin-top:0">
 <p style="text-align:center">&copy; 2022 Brandon Schmitz</p>
