--- a/header.html
+++ b/header.html
@@ -10,25 +10,25 @@
             });
         </script>
     </head>
-    <div class='header'>
-        <div>
-            <div id="sidenav" class="sidenav">
-              <a href='#'></a>
-              <a href='/index.html' id="u">Dashboard</a>
-              <a href="/skills.html" id='u'>Skills</a>
-              <a href="/areas.html">Areas of study</a>
-              <a href='/tutorials.html' id='u'>Tutorials</a>
-              <a href="/suggestions.html" id='u'>Suggestions</a>
-              <a href="/about.html">About</a>
-            </div>
-          
-            <!-- Use any element to open the sidenav -->
-            <span id='menu' onclick="openNav()">&#9776;</span>
+    <!-- <div> -->
+        <div id="sidenav" class="sidenav">
+          <a href='/index.html' id="u">Dashboard</a>
+          <!-- <a href="/skills.html" id='u'>Skills</a> -->
+          <a href="/topics/areas.html">Areas of study</a>
+          <a href='/tutorials.html' id='u'>Tutorials</a>
+          <a href="/suggestions.html" id='u'>Suggestions</a>
+          <a href="/about.html">About</a>
         </div>
+      
+        <!-- Use any element to open the sidenav -->
+        <span id='menu' onclick="openNav()">&#9776;</span>
+    <!-- </div> -->
+    <div class='header desktop-only'>
+        <div></div>
         <a href='/index.html'>
             <img class='logo' src='/imgs/sl-logo.PNG' style='height:50px' alt='logo here'>
         </a>
-        <div class='top-menu' class='desktop-only'>
+        <div class='top-menu'>
             <!-- <a href='donate.html'>Donate</a> -->
             <a href='signup.html' style='position:absolute;right:50px;top:30px;' id='u'>Sign up</a>
             <a href='about.html' class='desktop-only'></a>
