--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-Frame-Options" content="deny">
-  <meta http-equiv="refresh" content="0; URL=areas.html" />
+  <meta http-equiv="refresh" content="0; URL=/topics/areas.html" />
   <title>Home</title>
   <link rel='icon' href='imgs/sl-logo.PNG'>
   <link rel='stylesheet' href='css/styles.css'>
@@ -15,7 +15,7 @@
   <div id='header' include-html='header.html' src='js/index.js'></div>
   <script>includeHTML();</script>
   
-  <h1>Welcome!</h1>
+  <h1>Redirecting...</h1>
   <div class='content'>
     <iframe id='u' src='challenge.html' scrolling='no' frameBorder='0'>Uh-Oh! Messed up the website, my bad..</iframe>
   </div>
