--- a/topics/computer-org.html
+++ b/topics/computer-org.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Probability & Statistics</title>
-    <link rel='icon' href='/imgs/sl-logo.PNG'>
+    <title>Computer Organization & Structure</title>
+    <link rel='icon' href='/imgs/sl-logo.png'>
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
-    <script type="text/javascript" src="/js/outlines.js"></script>
-  </head>
-  <body onload="writeOutline('probstats', 'area'); writeOutline('areas','Probability & Statistics')">
-    <div id='header' include-html='/header.html' src='/js/index.js'></div>
+</head>
+<body onload="writeOutline('compOrgStr', 'area');writeOutline('areas', 'Computer Organization & Structure')">
+    <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
         <div class="desktop-only skills" id="skills">
@@ -25,6 +24,6 @@
 
         </div>
     </div>
-    <div id='footer' include-html='/footer.html' src='js/index.js'></div>
+    <div id="footer" include-html='/footer.html' src='/js/index.js'></div>
 </body>
 </html>
