--- a/skills/bitwise-logic-ops.html
+++ b/skills/bitwise-logic-ops.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Probability & Statistics</title>
-    <link rel='icon' href='/imgs/sl-logo.PNG'>
+    <title>Bitwise Logic Operators</title>
+	<link rel='icon' href='/imgs/sl-logo.PNG'>
     <link rel='stylesheet' href='/css/styles.css'>
-    <script type=text/javascript src='/js/index.js'></script>
-    <script type="text/javascript" src="/js/outlines.js"></script>
-  </head>
-  <body onload="writeOutline('probstats', 'area'); writeOutline('areas','Probability & Statistics')">
-    <div id='header' include-html='/header.html' src='/js/index.js'></div>
+    <script type='text/javascript' src='/js/index.js'></script>
+</head>
+<body onload="writeOutline('compOrgStr', 'Bitwise Logic Operators')">
+    <div include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
     <div class="content-container">
         <div class="desktop-only skills" id="skills">
@@ -21,10 +20,12 @@
         <!-- get the function for writing the course outline in the skills menu -->
         <script type="text/javascript" src="/js/outlines.js"></script>
         
-        <div class="content" id="content">
+        <div class="content">
+            <h1>Bitwise Logic Operators</h1> 
+            <div style="height:350px"></div>
 
         </div>
     </div>
-    <div id='footer' include-html='/footer.html' src='js/index.js'></div>
+    <div include-html='/footer-nm.html' src='/js/index.js'></div>
 </body>
 </html>
