--- a/skills/si-units.html
+++ b/skills/si-units.html
@@ -9,57 +9,71 @@
     <link rel='stylesheet' href='/css/styles.css'>
     <script type=text/javascript src='/js/index.js'></script>
 </head>
-<body>
+<body onload="writeOutline('physClassical')">
     <div id='header' include-html='/header.html' src='/js/index.js'></div>
     <script>includeHTML();</script>
-    <h1>SI Units</h1>
-    <div class='content'>
-        <p style='font-size:12px;'>(Syst&eacute;me Internationale)</p>
-        <p class='cards-label'>SI Base Units</p>
-        <div class='process'>
-            <table>
-                <tr>
-                    <th>Symbol</th>
-                    <th>Name</th>
-                    <th>Quantity</th>
-                </tr>
-                <tr>
-                    <td>s</td>
-                    <td>second</td>
-                    <td>time</td>
-                </tr>
-                <tr>
-                    <td>m</td>
-                    <td>meter</td>
-                    <td>length</td>
-                </tr>
-                <tr>
-                    <td>kg</td>
-                    <td>kilogram</td>
-                    <td>mass</td>
-                </tr>
-                <tr>
-                    <td>A</td>
-                    <td>ampere</td>
-                    <td>electric current</td>
-                </tr>
-                <tr>
-                    <td>K</td>
-                    <td>kelvin</td>
-                    <td>thermodynamic temperature</td>
-                </tr>
-                <tr>
-                    <td>mol</td>
-                    <td>mole</td>
-                    <td>amount of substance</td>
-                </tr>
-                <tr>
-                    <td>cd</td>
-                    <td>candela</td>
-                    <td>luminous intensity</td>
-                </tr>
-            </table>
+    <div class="content-container">
+        <div class="desktop-only skills" id="skills">
+
+            <span class='tab natsci' id="tab" onclick="openOutline()">&#x25c0;</span>
+        </div>
+        <!-- get the function for writing the course outline in the skills menu -->
+        <script type="text/javascript" src="/js/outlines.js"></script>
+        <div class='content'>
+            <h1 style="margin:0">SI Units</h1>
+            <p style='font-size:12px;'>(Syst&eacute;me Internationale)</p>
+            <div class='process has-table'>
+                <p class="process-label">SI Base Units</p>
+                <!-- NEEDS WAY TO SHRINK AND BE VISIBLE ON MOBILE -->
+                <table>
+                    <tr>
+                        <th>Symbol</th>
+                        <th>Name</th>
+                        <th>Quantity</th>
+                    </tr>
+                    <tr>
+                        <td>s</td>
+                        <td>second</td>
+                        <td>time</td>
+                    </tr>
+                    <tr>
+                        <td>m</td>
+                        <td>meter</td>
+                        <td>length</td>
+                    </tr>
+                    <tr>
+                        <td>kg</td>
+                        <td>kilogram</td>
+                        <td>mass</td>
+                    </tr>
+                    <tr>
+                        <td>A</td>
+                        <td>ampere</td>
+                        <td>electric current</td>
+                    </tr>
+                    <tr>
+                        <td>K</td>
+                        <td>kelvin</td>
+                        <td>thermodynamic temperature</td>
+                    </tr>
+                    <tr>
+                        <td>mol</td>
+                        <td>mole</td>
+                        <td>amount of substance</td>
+                    </tr>
+                    <tr>
+                        <td>cd</td>
+                        <td>candela</td>
+                        <td>luminous intensity</td>
+                    </tr>
+                </table>
+            </div>
+            <!-- <div class="process">
+            <p class="process-label">Time</p>
+            <p>Time - as in tiiime 2 bomb ur dorm</p>
+        </div> -->
         </div>
     </div>
+    <div id="footer" include-html='/footer-nm.html' src='/js/index.js'></div>
 </body>
 </html>
